Fix height overflow in sitenav

--- a/source/sass/component/_siteselector.scss
+++ b/source/sass/component/_siteselector.scss
@@ -10,6 +10,12 @@ $c-siteselector-radius: var(--c-siteselector-radius, $c-siteselector-height) !de
     background-color: #{$c-siteselector-background}; 
     height: calc(#{$base} * 4.5);
 
+    .c-nav .c-nav__item-wrapper,
+    .c-nav .c-nav__item-wrapper > * {
+        min-height: unset;
+        height: unset;
+    }
+
     .c-siteselector__item.c-nav__item--depth-1 {
         padding: 0 calc(#{$base} * 1.5); 
         border-radius: #{$c-siteselector-radius};
